fixed Intro z-index

--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -4,7 +4,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 999;
 }
 .Intro .header-cover {
   width: 100%;
